Add JWT support for authentication, including services and controllers; updates dependencies in pom.xml and settings in application.properties.